Fixed scrollbar issue

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,7 @@ div#root {
       -moz-flex: 1;
        -ms-flex: 1;
            flex: 1;
+       overflow: auto;
  }
 
  article {
